package behavioral.observer.baitapTH_CA1;

public interface Listener<T> {
    void listen(T t);

}
